# cobot

./: cobot_step_by_step.txt  screen_and_touch.txt
affbot_kinematics/: CMakeLists.txt  affbot_kinematics_plugin_description.xml  package.xml
affbot_kinematics/action/: AffbotMoveLastPlan.action
affbot_kinematics/include/: affbot_kinematics.h
affbot_kinematics/scripts/: affbot_controller.py  affbot_controller_client.py  affbot_planner.py  affbot_planner_client.py  control_plan.py  control_plan_win.py  controller.py  convert_motor_angle.py  gen_plan.py  joint_state_publisher.py  lib_controller.py  line_planner.py  line_planner2.py  my_kinematics.py  p2p_planner.py  plot_plan.py  plot_plan_result.py  test_central_mega.py  test_controller_pos_velo.py  test_kinematics.py  test_quat_ab.py
affbot_kinematics/src/: affbot_kinematics.cpp  main.cpp
affbot_kinematics/srv/: AffbotGetLastPlan.srv  AffbotPlanning.srv
affbot_v10_plane_kinematics/: CMakeLists.txt  affbot_v10_plane_kinematics_plugin_description.xml  package.xml
affbot_v10_plane_kinematics/src/: affbot_ik.cpp  affbot_ik_solver.cpp  affbot_kinematics.cpp  affbot_kinematics_plugin.cpp  affbot_kinematics_utils.cpp  main.cpp
cobot_core/: CMakeLists.txt  (+1 more)
cobot_interface/: CMakeLists.txt  cobot_interface.rviz  cobot_interface_alpha.xml  cobot_interface_beta.xml  cobot_interface_jog_teach.xml  cobot_interface_status_tools.xml  package.xml
cobot_interface/alpha/: CMakeLists.txt
cobot_interface/alpha/include/: cobot_display.h  cobot_label.h  cobot_widget.h
cobot_interface/alpha/launch/: demo.launch
cobot_interface/beta/: CMakeLists.txt
cobot_interface/jog_teach/: CMakeLists.txt
cobot_interface/status_tools/: CMakeLists.txt
cobot_jig_controller/: CMakeLists.txt  package.xml  setup.py
cobot_jig_controller/include/: MathFunctions.h  traj_controller.h
cobot_jig_controller/launch/: cobot_pi_vel.launch  control_motor.launch
cobot_jig_controller/octave/: octave-workspace  setup_pi_joint.m  view_sample_const_velo.m  view_sample_move_cartesian.m  view_sample_move_joint.m  view_sample_move_joint_err.m  view_sample_move_traj.m  view_sample_traj.m  view_sample_traj_Tong_original.m  view_torque.m
cobot_jig_controller/scripts/: dynamic.py  eq.py  inverst_kinematics.py  j1.py  j123456.py  j1_sin.py  j2.py  j222.py  j3.py  j4.py  j5.py  j55.py  j6.py  old_teach.py  plot_tq.py  position_teach.py  read_serial.py  read_write_serial.py  rosbag_record.py  sin_wave.py  sin_wave2.py  spectrum.py  talker.py  teach.py  tester2.py  torque.py  torque_detection.py  view_traj.py  write_serial.py
cobot_jig_controller/src/: MathFunctions.cpp  driver_log.txt  jig_controller.cpp  my_controller.cpp  pi_control.cpp  real_velocity_controller.cpp  setup_pi_vel.cpp  traj_controller.cpp  velocity_controller.cpp
cobot_kinematic_arm_plugin/: CMakeLists.txt  cobot_kinematic_moveit_plugin_description.xml  package.xml
cobot_kinematic_arm_plugin/include/: cobot_kinematic.h.bak
cobot_kinematic_arm_plugin/src/: cobot_kinematic_moveit_plugin.cpp  cobot_kinematic_moveit_plugin.cpp.bak
cobot_pick/: CMakeLists.txt  package.xml
cobot_pick/action/: CobotFindObject.action
cobot_pick/launch/: action_server.launch  action_server_basket.launch  calibrate.launch  calibrate_basket.launch  collect_pick_sample.launch  inc_find_basket.launch  inc_find_object.launch  load.launch  load_basket.launch  record_rs.launch  rs_basket.launch  rs_box.launch  rs_camera.launch  rs_object.launch  rviz.launch  save.launch  save_basket.launch
cobot_pick/results/: text_gray0-0.tif  text_gray0-1.tif  text_gray1-0.tif  text_gray1-1.tif  text_gray10-0.tif  text_gray10-1.tif  text_gray100-0.tif  text_gray100-1.tif  text_gray101-0.tif  text_gray101-1.tif  text_gray102-0.tif  text_gray102-1.tif  text_gray103-0.tif  text_gray103-1.tif  text_gray104-0.tif  text_gray104-1.tif  text_gray105-0.tif  text_gray105-1.tif  text_gray106-0.tif  text_gray106-1.tif  text_gray107-0.tif  text_gray107-1.tif  text_gray108-0.tif  text_gray108-1.tif  text_gray109-0.tif  text_gray109-1.tif  text_gray11-0.tif  text_gray11-1.tif  text_gray110-0.tif  text_gray110-1.tif  text_gray111-0.tif  text_gray111-1.tif  text_gray112-0.tif  text_gray112-1.tif  text_gray113-0.tif  text_gray113-1.tif  text_gray114-0.tif  text_gray114-1.tif  text_gray115-0.tif  text_gray115-1.tif  (+1270 more)
cobot_pick/results_basket/: text_gray1-0.tif  text_gray1-1.tif  text_gray10-0.tif  text_gray10-1.tif  text_gray100-0.tif  text_gray100-1.tif  text_gray101-0.tif  text_gray101-1.tif  text_gray102-0.tif  text_gray102-1.tif  text_gray103-0.tif  text_gray103-1.tif  text_gray104-0.tif  text_gray104-1.tif  text_gray105-0.tif  text_gray105-1.tif  text_gray106-0.tif  text_gray106-1.tif  text_gray107-0.tif  text_gray107-1.tif  text_gray108-0.tif  text_gray108-1.tif  text_gray109-0.tif  text_gray109-1.tif  text_gray11-0.tif  text_gray11-1.tif  text_gray110-0.tif  text_gray110-1.tif  text_gray111-0.tif  text_gray111-1.tif  text_gray112-0.tif  text_gray112-1.tif  text_gray113-0.tif  text_gray113-1.tif  text_gray114-0.tif  text_gray114-1.tif  text_gray115-0.tif  text_gray115-1.tif  text_gray116-0.tif  text_gray116-1.tif  (+646 more)
cobot_pick/rviz/: calibrate.rviz  rs.rviz  save.rviz
cobot_pick/scripts/: capture.py  cobot_find_basket_client.py  cobot_find_object_client.py  test_3d.py
cobot_pick/src/: cLabeling.cpp  calibrate.cpp  cobot_find_object.cpp  collect_pick_sample.cpp  zdsfmt.cpp
cobot_planner/: CMakeLists.txt  package.xml
cobot_planner/launch/: bag2txt.launch
cobot_planner/scripts/: bag2txt.py  create_eq.py  create_full.py  create_txt.py  eq.py  find_current2torque.py  find_current2torque_static.py  lib_current2torque.py  lib_equation.py  lib_equation2.py  lib_sympy.py  plot_q.py  plot_torque.py  plot_torque2.py  set_const.py  test.py  test_angular_velocity.py  test_cal_cg.py  test_cal_torque.py  test_client.py  test_energy.py  test_eq_c.py  test_filter.py  test_sympy.py
cobot_planner/src/: cControl.cpp  cobot_test_eq.cpp  main.cpp
cobot_planner/srv/: CobotPlanning.srv
toe/my_ui/: CMakeLists.txt  memo.txt  my_ui_01.xml  package.xml
(+589 files in other folders)
