<?xml version="1.0"?>
<package format="2">
  <name>affbot_v10_plane_kinematics</name>
  <version>0.0.0</version>
  <description>The affbot_v10_plane_kinematics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tong@todo.todo">tong</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend> 
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>control_msgs</exec_depend> 
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend> 
  <exec_depend>angles</exec_depend>

  <build_export_depend>moveit_core</build_export_depend>

  <export>
    <moveit_core plugin="${prefix}/affbot_v10_plane_kinematics_plugin_description.xml"/>
  </export>
</package>
