<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>cobot_kinematic_arm_plugin</name>
  <version>0.0.0</version>
  <description>The cobot_kinematic_arm_plugin package</description>
  <maintainer email="dell@todo.todo">dell</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/cobot_kinematic_moveit_plugin_description.xml"/>
  </export>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
</package>
